[tool.poetry]
name = "lena_tweets"
version = "0.0.1"
description = "Tool to scrape tweets"
authors = ["Rebeka Marrton <rebekamarton@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8.1"
dagit = "~0.9.20"
dagster = "~0.9.20"
dagster-cron = "~0.9.20"
tweepy = "~3.9.0"
pandas = "~1.1.4"

[tool.poetry.dev-dependencies]
jupyter = "1.0.0"
pytest = "6.1.2"
nest_asyncio = "*"
pylint = "^2.6.0"
rope = "^0.18.0"
